<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:layout_margin="8dp"
    android:orientation="vertical"
    android:background="#ffd7bc">

    <TextView
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hey! Lets talk about App Rating!\nHow's the App for you?"
        android:textColor="#fefefe"
        android:textSize="17sp"
        android:textStyle="bold"
        android:background="#1995ad" />

    <Button
        android:id="@+id/bawesome"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAllCaps="false"
        android:layout_marginTop="5dp"
        android:text="@string/fivestar"
        android:textColor="#000000"
        android:background="@drawable/textinputborder"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="6dp"/>

    <Button
        android:id="@+id/breason"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:textAllCaps="false"
        android:background="@drawable/textinputborder"
        android:text="@string/reason"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="6dp"/>
    <Button
        android:id="@+id/blater"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/later"
        android:background="@drawable/textinputborder"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="6dp"/>


</LinearLayout>